--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ Shopify.routes.root = "/";</script>
 <meta property="og:type" content="product">
 <link rel="amphtml" href="https://jiem.org/files/journals/1/articles/7144/submission/original/7144-17777-1-SM.html">
 <meta name="google-site-verification" content="BGu7moxcK8qQ2dCYnYtudT_Ofl8RCCKA7TNLUme-M6k" />
+    <meta name="google-site-verification" content="rJ2Cw-Dk0Nn0EFwNu7aExFbm9a3_dXAIDiNGUX2TE3g" />
 <meta name="keywords" content="JUDI MPO,BO SLOTGACOR,MPO SLOT,Agen JUDI MPO,CASINO 88,Link JUDI MPO,Akun JUDI MPO,Judi JUDI MPO,JUDI MPO Gacor,Situs JUDI MPO,Daftar JUDI MPO,JUDI MPO Terbaru,JUDI MPO Terbaik,Alternatif JUDI MPO,Casino JUDI MPO,Bola JUDI MPO">
 <meta property="og:description" content="JUDI MPO ☀️ Daftar Situs Agen Judi Mpo Online Tergacor Di Indonesia 2023-2024     JUDI MPO Adalah satu satu kumpulan judi online yang paling terpopuler di seluruh indonesia yang mampu memberikan sebuah informasi tentang slot gacor hari ini,"><meta property="og:image" content="http://kampusx500.go.id.biciclista.us/cdn/shop/files/preview_images/1afedd29ae614c3194815109d5d51ff7.thumbnail.0000000000.jpg?v=1703145937">
   <meta property="og:image:secure_url" content="http://judimpo.mouplands.org/cdn/shop/files/preview_images/1afedd29ae614c3194815109d5d51ff7.thumbnail.0000000000.jpg?v=1703145937">
